--- a/new prayer times page #####.html
+++ b/new prayer times page #####.html
@@ -50,7 +50,7 @@
 </form>
 
 
-<table id="11" class="tableStyle1">
+<table id="111" class="tableStyle1">
 		<colgroup style="width: 800px;" span="12"></colgroup> <!--copy line for every table (fixes width glitch thing)-->
 		<tbody>
 		  <tr>
@@ -510,7 +510,7 @@
 	</tbody>
 </table>    
 
-<table id="22" class="tableStyle1">
+<table id="222" class="tableStyle1">
 	<colgroup style="width: 800px;" span="12"></colgroup> <!--copy line for every table (fixes width glitch thing)-->
 	<tbody>
 		<tr>
@@ -928,7 +928,7 @@
 	</tbody>
   </table>
 
-<table id="33" class="tableStyle1">
+<table id="333" class="tableStyle1">
 	<colgroup style="width: 800px;" span="12"></colgroup> <!--copy line for every table (fixes width glitch thing)-->
 	<tbody>
 		<tr>
@@ -1388,470 +1388,7 @@
 	</tbody>
 </table>
 
-<table id="old4" class="tableStyle1">
-	<colgroup style="width: 800px;" span="12"></colgroup> <!--copy line for every table (fixes width glitch thing)-->
-	<tbody>
-		<tr>
-			<td rowspan="1" colspan="8">Prayer Times Begin </td>
-			<td rowspan="1" colspan="4">Jama’ah Time</td>
-		</tr>
-	</tbody>
-	<tbody>
-        <tr>
-          <td>Date</td>
-          <td>Day</td>
-          <td>Fajr</td>
-          <td>Sunrise</td>
-          <td>Zuhr</td>
-          <td>Asr</td>
-          <td>Maghrib</td>
-          <td>Isha</td>
-          <td>Fajr</td>
-          <td>Zuhr</td>
-          <td>Asr</td>
-          <td>Isha</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>Fri</td>
-          <td>5:02am</td>
-          <td>6:39am</td>
-          <td>1:15pm</td>
-          <td>5:33pm</td>
-          <td>7:44pm</td>
-          <td>9:01pm</td>
-          <td>5:45am</td>
-          <td>1:30pm</td>
-          <td>6:30pm</td>
-          <td>9:30pm</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Sat</td>
-          <td>4:59am</td>
-          <td>6:37am</td>
-          <td>1:15pm</td>
-          <td>5:35pm</td>
-          <td>7:46pm</td>
-          <td>9:02pm</td>
-          <td><strong>AFTER</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Sun</td>
-          <td>4:56am</td>
-          <td>6:34am</td>
-          <td>1:15pm</td>
-          <td>5:36pm</td>
-          <td>7:50pm</td>
-          <td>9:04pm</td>
-          <td><strong>15</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Mon</td>
-          <td>4:53am</td>
-          <td>6:32am</td>
-          <td>1:15pm</td>
-          <td>5:38pm</td>
-          <td>7:51pm</td>
-          <td>9:06pm</td>
-          <td><strong>MINS</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Tue</td>
-          <td>4:50am</td>
-          <td>6:29am</td>
-          <td>1:14pm</td>
-          <td>5:39pm</td>
-          <td>7:54pm</td>
-          <td>9:07pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>Wed</td>
-          <td>4:48am</td>
-          <td>6:27am</td>
-          <td>1:14pm</td>
-          <td>5:41pm</td>
-          <td>7:56pm</td>
-          <td>9:09pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>7</td>
-          <td>Thu</td>
-          <td>4:45am</td>
-          <td>6:24am</td>
-          <td>1:14pm</td>
-          <td>5:42pm</td>
-          <td>7:58pm</td>
-          <td>9:11pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>8</td>
-          <td>Fri</td>
-          <td>4:42am</td>
-          <td>6:22am</td>
-          <td>1:13pm</td>
-          <td>5:43pm</td>
-          <td>8:00pm</td>
-          <td>9:12pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td>Sat</td>
-          <td>4:39am</td>
-          <td>6:19am</td>
-          <td>1:13pm</td>
-          <td>5:45pm</td>
-          <td>8:02pm</td>
-          <td>9:14pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>10</td>
-          <td>Sun</td>
-          <td>4:36am</td>
-          <td>6:17am</td>
-          <td>1:13pm</td>
-          <td>5:46pm</td>
-          <td>8:04pm</td>
-          <td>9:16pm</td>
-          <td><strong>AFTER</strong></td>
-          <td>“</td>
-          <td>7:00pm</td>
-          <td>9:45pm</td>
-        </tr>
-        <tr>
-          <td>11</td>
-          <td>Mon</td>
-          <td>4:33am</td>
-          <td>6:14am</td>
-          <td>1:13pm</td>
-          <td>5:47pm</td>
-          <td>8:06pm</td>
-          <td>9:17pm</td>
-          <td><strong>15</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>12</td>
-          <td>Tue</td>
-          <td>4:31am</td>
-          <td>6:12am</td>
-          <td>1:12pm</td>
-          <td>5:49pm</td>
-          <td>8:08pm</td>
-          <td>9:19pm</td>
-          <td><strong>MINS</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>13</td>
-          <td>Wed</td>
-          <td>4:28am</td>
-          <td>6:09am</td>
-          <td>1:12pm</td>
-          <td>5:50pm</td>
-          <td>8:10pm</td>
-          <td>9:21pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>14</td>
-          <td>Thu</td>
-          <td>4:25am</td>
-          <td>6:07am</td>
-          <td>1:12pm</td>
-          <td>5:51pm</td>
-          <td>8:12pm</td>
-          <td>9:22pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>15</td>
-          <td>Fri</td>
-          <td>4:22am</td>
-          <td>6:04am</td>
-          <td>1:12pm</td>
-          <td>5:53pm</td>
-          <td>8:14pm</td>
-          <td>9:24pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>16</td>
-          <td>Sat</td>
-          <td>4:20am</td>
-          <td>6:02am</td>
-          <td>1:11pm</td>
-          <td>5:54pm</td>
-          <td>8:16pm</td>
-          <td>9:26pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>17</td>
-          <td>Sun</td>
-          <td>4:17am</td>
-          <td>6:00am</td>
-          <td>1:11pm</td>
-          <td>5:55pm</td>
-          <td>8:18pm</td>
-          <td>9:28pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>7:15pm</td>
-          <td>10:00pm</td>
-        </tr>
-        <tr>
-          <td>18</td>
-          <td>Mon</td>
-          <td>4:14am</td>
-          <td>5:57am</td>
-          <td>1:11pm</td>
-          <td>5:57pm</td>
-          <td>8:20pm</td>
-          <td>9:29pm</td>
-          <td><strong>AFTER</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>19</td>
-          <td>Tue</td>
-          <td>4:12am</td>
-          <td>5:55am</td>
-          <td>1:11pm</td>
-          <td>5:58pm</td>
-          <td>8:22pm</td>
-          <td>9:31pm</td>
-          <td><strong>15</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>20</td>
-          <td>Wed</td>
-          <td>4:09am</td>
-          <td>5:52am</td>
-          <td>1:10pm</td>
-          <td>5:59pm</td>
-          <td>8:24pm</td>
-          <td>9:33pm</td>
-          <td><strong>MINS</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>21</td>
-          <td>Thu</td>
-          <td>4:06am</td>
-          <td>5:50am</td>
-          <td>1:10pm</td>
-          <td>6:01pm</td>
-          <td>8:26pm</td>
-          <td>9:34pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>22</td>
-          <td>Fri</td>
-          <td>4:04am</td>
-          <td>5:48am</td>
-          <td>1:10pm</td>
-          <td>6:02pm</td>
-          <td>8:27pm</td>
-          <td>9:36pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>23</td>
-          <td>Sat</td>
-          <td>4:01am</td>
-          <td>5:45am</td>
-          <td>1:10pm</td>
-          <td>6:03pm</td>
-          <td>8:28pm</td>
-          <td>9:38pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>24</td>
-          <td>Sun</td>
-          <td>3:58am</td>
-          <td>5:43am</td>
-          <td>1:10pm</td>
-          <td>6:04pm</td>
-          <td>8:30pm</td>
-          <td>9:39pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>7:15pm</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>25</td>
-          <td>Mon</td>
-          <td>3:56am</td>
-          <td>5:41am</td>
-          <td>1:09pm</td>
-          <td>6:06pm</td>
-          <td>8:32pm</td>
-          <td>9:41pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>26</td>
-          <td>Tue</td>
-          <td>3:53am</td>
-          <td>5:38am</td>
-          <td>1:09pm</td>
-          <td>6:07pm</td>
-          <td>8:34pm</td>
-          <td>9:43pm</td>
-          <td><strong>AFTER</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>27</td>
-          <td>Wed</td>
-          <td>3:51am</td>
-          <td>5:36am</td>
-          <td>1:09pm</td>
-          <td>6:08pm</td>
-          <td>8:36pm</td>
-          <td>9:45pm</td>
-          <td><strong>15</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>28</td>
-          <td>Thu</td>
-          <td>3:48am</td>
-          <td>5:34am</td>
-          <td>1:09pm</td>
-          <td>6:09pm</td>
-          <td>8:38pm</td>
-          <td>9:46pm</td>
-          <td><strong>MINS</strong></td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>29</td>
-          <td>Fri</td>
-          <td>3:45am</td>
-          <td>5:32am</td>
-          <td>1:09pm</td>
-          <td>6:11pm</td>
-          <td>8:40pm</td>
-          <td>9:48pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-        <tr>
-          <td>30</td>
-          <td>Sat</td>
-          <td>3:43am</td>
-          <td>5:29am</td>
-          <td>1:09pm</td>
-          <td>6:12pm</td>
-          <td>8:42pm</td>
-          <td>9:50pm</td>
-          <td><br>
-          </td>
-          <td>“</td>
-          <td>“</td>
-          <td>“</td>
-        </tr>
-      </tbody>
-</table>
-
-<table class="tableStyle1" id="44">
+<table class="tableStyle1" id="444">
 	<colgroup style="width: 900px;" span="13"></colgroup> <!--copy line for every table (fixes width glitch thing)-->
 	<tbody>
 		<tr>
@@ -2332,7 +1869,7 @@
 	</tbody>
 </table>
 
-<table class="tableStyle1" id="55">
+<table class="tableStyle1" id="555">
 	<colgroup style="width: 900px;" span="12"></colgroup> <!--copy line for every table (fixes width glitch thing)-->
 	<tbody>
 		<tr>
@@ -2792,7 +2329,7 @@
 	</tbody>
 </table>
 
-<table id="66" class="tableStyle1">
+<table id="666" class="tableStyle1">
 	<colgroup style="width: 900px;" span="12"></colgroup> <!--copy line for every table (fixes width glitch thing)-->
 	<tbody>
 		<tr>
@@ -3238,7 +2775,7 @@
 	</tbody>
 </table>
 
-<table id="77" class="tableStyle1">
+<table id="777" class="tableStyle1">
 	<colgroup style="width: 900px;" span="12"></colgroup> <!--copy line for every table (fixes width glitch thing)-->
 	<tbody>
 		<tr>
@@ -3710,7 +3247,7 @@ $(document).ready(function(){
 
   $('#monthSelect').val(monthNum);    //selects current month for form
 
-  var thisMonthTbl=document.getElementById( monthNum.toString()+monthNum.toString() );
+  var thisMonthTbl=document.getElementById( monthNum.toString()+monthNum.toString()+monthNum.toString() );
   thisMonthTbl.style.display="block" ;    //unhide then some formatting
   thisMonthTbl.rows[dayNum+1].classList.add('dayRow');      //since first two rows are headers and rows start from 0
   thisMonthTbl.rows[0].classList.add('firstRow');
