change to ramadhan notice in popup

--- a/popupV2 ####.html
+++ b/popupV2 ####.html
@@ -64,33 +64,26 @@ body{
         <!--<img src="https://files.secure.website/wscfus/10644130/29586052/youthevent-w1080.jpeg" class="popupImage">-->
         <br>
         <br>
-        <p><b>  Assalāmu ‘Alaykum Wa    Rahmatullāhi Wa Barakātuh
-            <br>
-            NEWCASTLE MUSLIM CENTRE INVITES YOU ALL TO:
-            <br>
-            🔶‘EĪD UL FITR PRAYER🔶
+        <p>
+        <b>  
+            Assalāmu ‘Alaykum Wa    Rahmatullāhi Wa Barakātuh
             <br>
             <br>
-            🕘 TIME: 9AM
+            <br>
+            🌙 Ramadhān has been confirmed to start on Thursday 23rd March 🌙
             <br>
             <br>
-            📍LOCATION: NEWCASTLE MUSLIM CENTRE CAR PARK
+            🔶Taraweeh prayers will commence on Wednesday 22nd March🔶
             <br>
             <br>
-            🗓 DATE: Monday 2nd of May
+            🕘 Isha + Taraweeh TIME: 9:30pm            
             <br>
             <br>            
             🚺 SISTERS FACILITIES AVAILABLE 
             <br>
-            <br>
-            (PLEASE BRING YOUR PRAYER MATS WITH YOU)
-            <br>
-            <br>
-            <br>
-            🛑*IMPORTANT NOTICE *🛑
-            <br>
-            If it rains, we will be conducting two congregational prayers inside the Masjid. The first at *8:30am **and the second at *9:45am. 
-        </b></p>
+            <br>           
+        </b>
+        </p>
     </div>
 
 <script>
