--- a/salah times widget #####.html
+++ b/salah times widget #####.html
@@ -53,7 +53,9 @@
     }
 </style>
 <p id="dateDisplay" class="dateStyle1"></p>
-<p id="nextPrayer" style="color:rgb(0, 0, 0);text-align:center;font-weight: bold;"> next salah </p>
+<p id="nextPrayer" style="color:rgb(0, 0, 0);text-align:center;font-weight:bold;display:none;">
+    next salah
+</p>
 <table class="auto-style5" id="siteTable">
     <tbody>
         <tr>
@@ -3233,7 +3235,7 @@
             <td>18:51</td>
             <td>21:38</td>
             <td>22:48</td>
-            <td>03:00</td>
+            <td>03:15</td>
             <td>13:30</td>
             <td>19:45</td>
             <td>21:38</td>
@@ -3249,7 +3251,7 @@
             <td>18:50</td>
             <td>21:36</td>
             <td>22:48</td>
-            <td>03:00</td>
+            <td>03:15</td>
             <td>13:30</td>
             <td>19:45</td>
             <td>21:36</td>
@@ -3265,7 +3267,7 @@
             <td>18:49</td>
             <td>21:35</td>
             <td>22:50</td>
-            <td>03:00</td>
+            <td>03:15</td>
             <td>13:30</td>
             <td>19:45</td>
             <td>21:35</td>
@@ -3281,7 +3283,7 @@
             <td>18:49</td>
             <td>21:34</td>
             <td>22:48</td>
-            <td>03:00</td>
+            <td>03:15</td>
             <td>13:30</td>
             <td>19:45</td>
             <td>21:34</td>
@@ -3297,7 +3299,7 @@
             <td>18:48</td>
             <td>21:32</td>
             <td>22:47</td>
-            <td>03:00</td>
+            <td>03:15</td>
             <td>13:30</td>
             <td>19:45</td>
             <td>21:32</td>
@@ -3313,7 +3315,7 @@
             <td>18:47</td>
             <td>21:31</td>
             <td>22:45</td>
-            <td>03:00</td>
+            <td>03:15</td>
             <td>13:30</td>
             <td>19:45</td>
             <td>21:31</td>
@@ -3329,7 +3331,7 @@
             <td>18:47</td>
             <td>21:29</td>
             <td>22:43</td>
-            <td>03:00</td>
+            <td>03:15</td>
             <td>13:30</td>
             <td>19:45</td>
             <td>21:29</td>
@@ -3345,7 +3347,7 @@
             <td>18:46</td>
             <td>21:28</td>
             <td>22:41</td>
-            <td>03:00</td>
+            <td>03:15</td>
             <td>13:30</td>
             <td>19:45</td>
             <td>21:28</td>
@@ -5950,8 +5952,8 @@
     islamicDate = new Intl.DateTimeFormat('en-EN-u-ca-islamic', {
         day: 'numeric', month: 'long', year: 'numeric'
     }).format(Date.now());
-    // let date = new Date();
-    let date = new Date(2000, 2, 29, 19, 49, 0, 0);//testing (yr, month, day, hours, minutes, secs, millisecs)
+    let date = new Date();
+    // let date = new Date(2000, 2, 29, 19, 49, 0, 0);//testing (yr, month, day, hours, minutes, secs, millisecs)
     const startOfYear = new Date(date.getFullYear(), 0, 1);
     const diff = date - startOfYear;
     const oneDay = 1000 * 60 * 60 * 24;
@@ -6022,6 +6024,6 @@
         }
     }
     //document.getElementById('test1').innerHTML = d.getHours()<hrs[4] ; //test
-    document.getElementById('nextPrayer').innerHTML = (nxtSalah === `Maghrib Jama'ah `) ? 'Iftar time ' + siteTable.rows[1].cells[5].innerHTML : "Next Prayer: "+ nxtSalah + nextSalahTime ; 
+    document.getElementById('nextPrayer').innerHTML = "Next Prayer: "+ nxtSalah + nextSalahTime;
 
 </script>
